--- a/test/index.html
+++ b/test/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Roadblock Manager</title>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-	<script type="text/javascript" src="../libs/js/roadblock.min.js"></script>
+	<script type="text/javascript" src="../libs/js/overlay-manager.min.js"></script>
 </head>
 <body class="roadblockRoot" style="margin:0;">
 	<iframe id="srcFrame" width="100%" src="http://davidgallant.info"></iframe>
@@ -16,41 +16,12 @@
 					customIncludeUrl: "http://www.google.ca",
 					parameters: {
 						height: "100%",
-						//excludes: "^http:\/\/((origin)[-\.])?(www|arc)\.nick(-[dq](\.mtvi))?\.com\/?$",
 						width: "100%",
-						// onAdfree: "true",
-						//deferCookie: "false",
 					}
-					/*,{
-					customIncludeUrl: "http://www.facebook.com",
-					parameters: {
-						height: "100%",
-						excludes: "^http:\/\/((origin)[-\.])?(www|arc)\.nick(-[dq](\.mtvi))?\.com\/?$",
-						width: "100%",
-						onAdfree: "true",
-						deferCookie: "false",
-					},{
-					customIncludeUrl: "http://www.twitter.com",
-					parameters: {
-						height: "100%",
-						excludes: "^http:\/\/((origin)[-\.])?(www|arc)\.nick(-[dq](\.mtvi))?\.com\/?$",
-						width: "100%",
-						onAdfree: "true",
-						deferCookie: "false",
-					},{
-					customIncludeUrl: "http://www.linkedin.com",
-					parameters: {
-						height: "100%",
-						excludes: "^http:\/\/((origin)[-\.])?(www|arc)\.nick(-[dq](\.mtvi))?\.com\/?$",
-						width: "100%",
-						onAdfree: "true",
-						deferCookie: "false",
-					}*/
-
 				}]
 			}];
 
-			var rm = new Roadblock(data, false);
+			var om = new OverlayManager(data);
 	</script>
 </body>
 </html>
