working so far.

--- a/test/index.html
+++ b/test/index.html
@@ -13,20 +13,21 @@
 
 		var data = [{
 				promos: [{
-					customIncludeUrl: "http://www.google.ca",
+					customIncludeUrl: "http://vignette3.wikia.nocookie.net/theflash/images/b/bc/The_Flash_Logo.jpg",
 					parameters: {
 						includes: "^http://localhost:8888/overlay-manager/test/,^http://www.test.com",
-						height: "100px",
-						width: "100px",
+						height: "200px",
+						width: "400px",
 						onAdfree: true,
 						deferCookie: true,
+						link: 'http://www.facebook.com',
 						backgroundColor: "255,0,0",
 						opacity: 0.5,
 						excludes: "^http://www.nick.com/overlay-manager/test/"
 					}
 				},
 				{
-					customIncludeUrl: "http://www.twitter.com"
+					customIncludeUrl: "http://www.placeditigal.com"
 				}
 				,{
 					customIncludeUrl: "http://www.facebook.com",
