--- a/test/index.html
+++ b/test/index.html
@@ -14,7 +14,6 @@
 		var data = [{
 				promos: [{
 					customIncludeUrl: "http://vignette3.wikia.nocookie.net/theflash/images/b/bc/The_Flash_Logo.jpg",
-					//customIncludeUrl: "http://davidgallant.info",
 					parameters: {
 						includes: "^http://localhost:8888/overlay-manager/test/,^http://www.test.com",
 						height: "100%",
@@ -29,10 +28,10 @@
 					}
 				},
 				{
-					customIncludeUrl: "http://www.davidgallant.info"
+					customIncludeUrl: "http://davidgallant.info"
 				}
 				,{
-					customIncludeUrl: "http://www.facebook.com",
+					customIncludeUrl: "http://davidgalant.info",
 					parameters: {
 						height: "100%",
 						width: "100%",
