--- a/test/index.html
+++ b/test/index.html
@@ -24,6 +24,7 @@
 						link: 'http://www.facebook.com',
 						backgroundColor: "10,255,0",
 						opacity: 0.5,
+						showClose: true,
 						excludes: "^http://www.nick.com/overlay-manager/test/"
 					}
 				},
